--- a/printer.cfg
+++ b/printer.cfg
@@ -40,9 +40,6 @@ unretract_speed: 30
 #####################################################################
 ## 	                MCU
 #####################################################################
-[mcu host]
-serial: /tmp/klipper_host_mcu
-
 [mcu]
 serial: /dev/serial0
 baud: 250000
@@ -132,3 +129,6 @@ max_temp: 100
 #*# pid_kp = 27.430
 #*# pid_ki = 1.355
 #*# pid_kd = 138.866
+#*#
+#*# [probe]
+#*# z_offset = 0.599
