--- a/CoreConfig/print_start.cfg
+++ b/CoreConfig/print_start.cfg
@@ -1,5 +1,5 @@
 [gcode_macro _USER_VARIABLES]
-variable_startprint_actions: "bed_soak", "chamber_soak", "skew_correction", "qgl", "z_offset", "bedmesh", "extruder_heating", "primeline"
+variable_startprint_actions: "bed_soak", "z_offset", "bedmesh", "extruder_heating", "primeline"
 gcode:
 
 [gcode_macro START_PRINT]
@@ -22,16 +22,12 @@ gcode:
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(printer["gcode_macro _USER_VARIABLES"].print_default_extruder_temp)|float %} # Extruder temperature
     {% set Z_ADJUST = params.Z_ADJUST|default(0)|float %}  # Optionnal Z adjustement from the slicer profile (ex. use it if you have textured vs smooth slicer profiles) 
     {% set SOAK = params.SOAK|default(printer["gcode_macro _USER_VARIABLES"].print_default_soak)|int %} # Heatsoak time of the bed in minutes
-    {% set CHAMBER_TEMP = params.CHAMBER|default(printer["gcode_macro _USER_VARIABLES"].print_default_chamber_temp)|int %} # Chamber temperature setpoint
-    {% set CHAMBER_MAXTIME = params.CHAMBER_MAXTIME|default(printer["gcode_macro _USER_VARIABLES"].print_default_chamber_max_heating_time)|int %} # Chamber heatsoak timeout in minutes
     {% set MATERIAL = params.MATERIAL|default(printer["gcode_macro _USER_VARIABLES"].print_default_material)|string %} # Material type set in the slicer
     {% set BED_MESH_PROFILE = params.MESH|default("")|string %} # Bed mesh profile to load
 
     # Set the variables to be used in all the modules based on the slicer parameters
     SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=bed_temp VALUE={BED_TEMP}
     SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=extruder_temp VALUE={EXTRUDER_TEMP}
-    SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=chamber_temp VALUE={CHAMBER_TEMP}
-    SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=chamber_maxtime VALUE={CHAMBER_MAXTIME}
     SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=material VALUE='"{MATERIAL}"'
     SET_GCODE_VARIABLE MACRO=START_PRINT VARIABLE=bed_mesh_profile VALUE='"{BED_MESH_PROFILE}"'
 
@@ -85,12 +81,8 @@ gcode:
     {% for action in sp_actions %}
         {% if action == "bed_soak" %}
             _MODULE_HEATSOAK_BED
-        {% elif action == "chamber_soak" %}
-            _MODULE_HEATSOAK_CHAMBER
         {% elif action == "skew_correction" %}
             _MODULE_SKEW_CORRECTION
-        {% elif action == "qgl" %}
-            _MODULE_QGL
         {% elif action == "extruder_heating" %}
             _MODULE_EXTRUDER_HEATING
         {% elif action == "z_offset" %}
@@ -125,97 +117,7 @@ gcode:
 
 [gcode_macro _MODULE_PRIMELINE]
 gcode:
-    _DISABLE_FILAMENT_RUNOUT_SENSOR
     LINE_PURGE
-    _ENABLE_FILAMENT_RUNOUT_SENSOR
-
-    # # Macro parameters
-    # {% set prime_line_length = params.LINE_LENGTH|default(printer["gcode_macro _USER_VARIABLES"].prime_line_length)|float %}
-    # {% set prime_line_purge_distance = params.PURGE_LENGTH|default(printer["gcode_macro _USER_VARIABLES"].prime_line_purge_distance)|float %}
-    # {% set prime_line_flowrate = params.FLOWRATE|default(printer["gcode_macro _USER_VARIABLES"].prime_line_flowrate)|float %}
-
-    # # Set internal macro vars
-    # {% set prime_line_x, prime_line_y = printer["gcode_macro _USER_VARIABLES"].prime_line_xy|map('float') %}
-    # {% set prime_line_direction = printer["gcode_macro _USER_VARIABLES"].prime_line_direction|string|upper %}
-
-    # {% set St = printer["gcode_macro _USER_VARIABLES"].travel_speed * 60 %}
-    # {% set Sz = printer["gcode_macro _USER_VARIABLES"].z_drop_speed * 60 %}
-    # {% set verbose = printer["gcode_macro _USER_VARIABLES"].verbose %}
-
-    # {% set max_extrude_cross_section = printer["configfile"].config["extruder"]["max_extrude_cross_section"]|float %}
-    # {% set filament_diameter = printer["configfile"].config["extruder"]["filament_diameter"]|float %}
-    
-    # {% set line_height = 0.6 %}
-
-    # # some more Macro parameters after retrieving defaults
-    # {% set prime_line_x = params.START_X|default(prime_line_x)|float %}
-    # {% set prime_line_y = params.START_Y|default(prime_line_y)|float %}
-    # {% set prime_line_direction = params.LINE_DIRECTION|default(printer["gcode_macro _USER_VARIABLES"].prime_line_direction)|string|upper %}
-
-    # # We first compute the width of the prime line
-    # {% set purge_volume = prime_line_purge_distance * 3.14159 * (filament_diameter / 2)**2 %}
-    # {% set line_width = purge_volume / (line_height * prime_line_length) %}
-
-    # # Then we check that the prime line cross section will not be problematic (exceeding Klipper max_extrude_cross_section)
-    # # or, if it's the case, we warn the user and add a correction to the length of filament to be purged
-    # {% if (line_height * line_width) > max_extrude_cross_section %}
-    #     {% if verbose %}
-    #         {action_respond_info("The prime_line_purge_distance of %.4f mm is too high and will exceed the max_extrude_cross_section!" % prime_line_purge_distance)}
-    #     {% endif %}
-    #     {% set prime_line_purge_distance = 0.98 * (max_extrude_cross_section * prime_line_length) / (3.14159 * (filament_diameter / 2)**2) %}
-    #     {% set purge_volume = prime_line_purge_distance * 3.14159 * (filament_diameter / 2)**2 %}
-    #     {% set line_width = purge_volume / (line_height * prime_line_length) %}
-    #     {% if verbose %}
-    #         {action_respond_info("Klippain corrected the prime_line_purge_distance to %.4f mm" % prime_line_purge_distance)}
-    #     {% endif %}
-    # {% endif %}
-
-    # # We then compute the height to width ratio and validate that the prime line will not be too thin
-    # {% if (line_height / line_width) >= 0.5 %} # TODO: validate this 1/2 ratio is good for all
-    #     {% if verbose %}
-    #         {action_raise_error("The prime line will be too thin and will probably not stick properly to the bed. Increase its purge distance or decrease its length! Aborting...")}
-    #     {% endif %}
-    # {% endif %}
-
-    # # Finally we compute the speed to get the correct flowrate for the prime line
-    # {% set speed = (prime_line_flowrate / (line_height * line_width)) * 60 |float %}
-
-    # _DISABLE_FILAMENT_RUNOUT_SENSOR
-
-    # G91
-    # M83
-    # {% if (printer.toolhead.position.z < 5) %}
-    #     G1 Z5 F{Sz}
-    # {% endif %}
-
-    # # Starting position
-    # G90
-    # G0 X{prime_line_x} Y{prime_line_y} F{St}
-    # G1 Z{line_height} F{Sz|int / 2}
-
-    # # Add pressure in the nozzle
-    # G92 E0
-    # G1 E18 F300
-
-    # # Prime line
-    # G92 E0
-    # {% if prime_line_direction == "X" %}
-    #     G1 X{prime_line_x + prime_line_length} E{prime_line_purge_distance} F{speed}
-    # {% elif prime_line_direction == "Y" %}
-    #     G1 Y{prime_line_y + prime_line_length} E{prime_line_purge_distance} F{speed}
-    # {% else %}
-    #     { action_respond_error("Prime line direction is not valid. Choose either X or Y in the variables.cfg file!") }
-    # {% endif %}
-
-    # # Retract and Z-hop
-    # G92 E0
-    # G1 E-0.2 F2100
-    # G92 E0
-    # G1 Z3 F{Sz}
-    
-    # # Flushing Klipper's buffer to ensure the primeline sequence is done before continuing
-    # M400
-    # _ENABLE_FILAMENT_RUNOUT_SENSOR
 
 [gcode_macro _MODULE_HEATSOAK_BED]
 gcode:
@@ -249,52 +151,9 @@ gcode:
     {% endif %}
 
 
-[gcode_macro _MODULE_HEATSOAK_CHAMBER]
-gcode:
-    # ----- CHAMBER HEATSOAK ----------------------------------
-    # If a setpoint is defined and a sensor available, then we wait to reach the chamber temperature (with a timeout in case it's winter...)
-    # If there is one, the recirculating filter is also be powered on from the previous step and kept like that to act as bed fans
-    {% set CHAMBER_TEMP = printer["gcode_macro START_PRINT"].chamber_temp %}
-    {% set CHAMBER_MAXTIME = printer["gcode_macro START_PRINT"].chamber_maxtime %}
-
-    {% set St = printer["gcode_macro _USER_VARIABLES"].travel_speed * 60 %}
-
-    {% set max_x = printer.toolhead.axis_maximum.x|float %}
-    {% set max_y = printer.toolhead.axis_maximum.y|float %}
-
-    {% if CHAMBER_TEMP > 0 %}
-        {% set chamber_sensor_name = printer["gcode_macro _USER_VARIABLES"].chamber_temperature_sensor_name %}
-        {% set CURRENT_TEMP = printer["temperature_sensor " ~ chamber_sensor_name].temperature|float %}
-
-        # We do a first test to validate that the chamber is not already at temperature before starting the soak
-        {% if CURRENT_TEMP <= CHAMBER_TEMP %}
-            G0 X{max_x|int / 2} Y{max_y|int / 3} Z50 F{St}
-
-            # Wait for the temperature of the chamber to be reached (default max: 15min)
-            HEATSOAK_CHAMBER TEMP={CHAMBER_TEMP} MAXTIME={CHAMBER_MAXTIME}
-
-        {% endif %}
-    {% endif %}
-
 [gcode_macro _MODULE_SKEW_CORRECTION]
 gcode:
     SKEW_PROFILE LOAD=CaliFlower
-
-[gcode_macro _MODULE_QGL]
-gcode:
-    # ----- TILTING ----------------------------------
-    # Do a QGL, Z_TILT_ADJUST, or nothing depending of the machine configuration
-    # The correct operation is automatically selected in the _TILT_CALIBRATE macro
-    {% set force_homing_in_start_print = printer["gcode_macro _USER_VARIABLES"].force_homing_in_start_print %}
-    {% set verbose = printer["gcode_macro _USER_VARIABLES"].verbose %}
-
-    STATUS_LEVELING
-
-    {% if printer.quad_gantry_level.applied|lower == 'false' or force_homing_in_start_print|lower == 'true' %}
-        QUAD_GANTRY_LEVEL
-    {% endif %}
-
-    STATUS_READY
 
 [gcode_macro _MODULE_EXTRUDER_HEATING]
 gcode:
@@ -364,36 +223,6 @@ gcode:
     {% if verbose %}
         RESPOND MSG="Extruder at safe temperature of {safe_extruder_temp} degrees"
     {% endif %}
-
-[gcode_macro HEATSOAK_CHAMBER]
-description: Heatsoak chamber to a specific temperature with a timeout
-gcode:
-    {% set SETPOINT_TEMP = params.TEMP|default(0)|float %}
-    {% set MAXTIME = params.MAXTIME|default(printer["gcode_macro _USER_VARIABLES"].print_default_chamber_max_heating_time)|int %}
-
-    {% set verbose = printer["gcode_macro _USER_VARIABLES"].verbose %}
-
-    {% for _ in range(1, MAXTIME) %}
-        _WAIT_CHAMBER_TEMP TEMP={SETPOINT_TEMP}
-    {% endfor %}
-    {% if verbose %}
-        RESPOND MSG="Chamber temperature OK or timeout reached!"
-    {% endif %}
-
-
-[gcode_macro _WAIT_CHAMBER_TEMP]
-# This macro is needed to allow klipper populate a new value in the printer[...].temperature variable
-# as each variables are populated only once at the beginning of every macro call
-gcode:
-    {% set chamber_sensor_name = printer["gcode_macro _USER_VARIABLES"].chamber_temperature_sensor_name %}
-    {% set SETPOINT_TEMP = params.TEMP|default(0)|float %}
-    {% set CURRENT_TEMP = printer["temperature_sensor " ~ chamber_sensor_name].temperature|float %}
-
-    {% if CURRENT_TEMP <= SETPOINT_TEMP %}
-        RESPOND MSG="Heating up the chamber : {CURRENT_TEMP}/{SETPOINT_TEMP}"
-        G4 P{60000 * 1} # wait a minute and check again if called in a loop
-    {% endif %}
-
 
 [gcode_macro HEATSOAK_BED]
 description: Heatsoak bed at specified temperature and wait for a specific amount of time
