removed tmc sensitivity set from homing override

--- a/CoreConfig/bed_calibration.cfg
+++ b/CoreConfig/bed_calibration.cfg
@@ -138,8 +138,8 @@ gcode:
   G4 P500
   G90
   #Return to the pre-macro values
-  RESPOND TYPE=echo MSG="Reset X stepper current to: {RUN_CUR_X_STEPPER}"
-  SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CUR_X_STEPPER}
+  RESPOND TYPE=echo MSG="Reset X stepper current to: {RUN_CUR}"
+  SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CUR}
 
 [gcode_macro _HOME_Y]
 gcode: 
@@ -158,8 +158,8 @@ gcode:
   G4 P500
   G90
   #Return to the pre-macro values
-  RESPOND TYPE=echo MSG="Reset Y stepper current to: {RUN_CUR_Y_STEPPER}"
-  SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CUR_Y_STEPPER}
+  RESPOND TYPE=echo MSG="Reset Y stepper current to: {RUN_CUR}"
+  SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CUR}
 
 [gcode_macro _HOME_Z]
 gcode: 
