--- a/CoreConfig/probe.cfg
+++ b/CoreConfig/probe.cfg
@@ -24,10 +24,10 @@ samples_tolerance: 0.05
 samples_tolerance_retries: 3
 speed: 10.0
 activate_gcode:
-  Probe_Deploy
+  _Probe_Deploy
   G4 P500 # Allow 500 milliseconds for the probe to deploy 
 deactivate_gcode:
-  Probe_Stow
+  _Probe_Stow
 
 [gcode_macro CALIBRATE_Z_OFFSET]
 gcode:
