--- a/printer.cfg
+++ b/printer.cfg
@@ -86,6 +86,11 @@ max_temp: 100
 [include CoreConfig/extruder.cfg]
 
 #####################################################################
+# 	                Homing
+#####################################################################
+[include CoreConfig/homing.cfg]
+
+#####################################################################
 # 	                Bed Grid Calibration
 #####################################################################
 [include CoreConfig/bed_calibration.cfg]
