--- a/CoreConfig/axes.cfg
+++ b/CoreConfig/axes.cfg
@@ -4,7 +4,7 @@
 
 [stepper_x]
 step_pin: gpio6
-dir_pin: gpio5
+dir_pin: !gpio5
 enable_pin: !gpio7
 microsteps: 16
 rotation_distance: 40
@@ -29,7 +29,7 @@ driver_SGTHRS: 68
 
 [stepper_y]
 step_pin: gpio11
-dir_pin: gpio10
+dir_pin: !gpio10
 enable_pin: !gpio12
 microsteps: 16
 rotation_distance: 40
