--- a/CoreConfig/homing.cfg
+++ b/CoreConfig/homing.cfg
@@ -137,7 +137,7 @@ gcode:
   {% set HOME_CUR = printer["gcode_macro _USER_VARIABLES"].homing_current %}
   RESPOND TYPE=echo MSG="Temporary set Y homing current to: {HOME_CUR}"
   # Retrieve used setting for stepper current and save them
-  {% set RUN_CUR_Y_STEPPER = printer.configfile.settings['tmc2209 stepper_y'].run_current %}
+  {% set RUN_CUR = printer.configfile.settings['tmc2209 stepper_y'].run_current %}
   SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR}
   # Pause to ensure driver stall flag is clear
   G4 P500
