homing speed fix

--- a/CoreConfig/homing.cfg
+++ b/CoreConfig/homing.cfg
@@ -4,7 +4,6 @@ axes: xyz
 gcode:
     {% set verbose = printer["gcode_macro _USER_VARIABLES"].verbose %}
     {% set homing_zhop = printer["gcode_macro _USER_VARIABLES"].homing_zhop|float|abs %}
-    {% set homing_travel_speed = printer["gcode_macro _USER_VARIABLES"].homing_travel_speed * 60 %}
     {% set homing_travel_accel = printer["gcode_macro _USER_VARIABLES"].homing_travel_accel %}
     {% set z_drop_speed = printer["gcode_macro _USER_VARIABLES"].z_drop_speed * 60 %}
 
@@ -106,6 +105,7 @@ gcode:
 
 [gcode_macro _HOME_X]
 gcode: 
+  {% set homing_travel_speed = printer["gcode_macro _USER_VARIABLES"].homing_travel_speed * 60 %}
   RESPOND TYPE=echo MSG="Axis selected: X"
   {% set HOME_CUR = printer["gcode_macro _USER_VARIABLES"].homing_current %}
   RESPOND TYPE=echo MSG="Temporary set X homing current to: {HOME_CUR}"
@@ -116,7 +116,7 @@ gcode:
   G4 P500
   G28 X0
   G91
-  G0 X-10
+  G0 X-10 F{homing_travel_speed}
   G4 P500
   G90
   #Return to the pre-macro values
@@ -125,6 +125,7 @@ gcode:
 
 [gcode_macro _HOME_Y]
 gcode: 
+  {% set homing_travel_speed = printer["gcode_macro _USER_VARIABLES"].homing_travel_speed * 60 %}
   RESPOND TYPE=echo MSG="Axis selected: Y"
   {% set HOME_CUR = printer["gcode_macro _USER_VARIABLES"].homing_current %}
   RESPOND TYPE=echo MSG="Temporary set Y homing current to: {HOME_CUR}"
@@ -136,7 +137,7 @@ gcode:
   RESPOND TYPE=echo MSG="Homing Y"
   G28 Y0
   G91
-  G0 Y10
+  G0 Y10 F{homing_travel_speed}
   G4 P500
   G90
   #Return to the pre-macro values
@@ -145,13 +146,14 @@ gcode:
 
 [gcode_macro _HOME_Z]
 gcode: 
+  {% set homing_travel_speed = printer["gcode_macro _USER_VARIABLES"].homing_travel_speed * 60 %}
   RESPOND TYPE=echo MSG="Axis selected: Z"
   {% if printer.heater_bed.temperature <0 %}
     RESPOND TYPE=error MSG="Bed not connected Z homing cancelled"
     SET_STEPPER_ENABLE STEPPER=stepper_z ENABLE=0
   {% else %} 
     RESPOND TYPE=echo MSG="Homing Z"
-    G0 X66 Y148
+    G0 X66 Y148 F{homing_travel_speed}
     G28 Z0
     G0 Z20  
   {% endif %}
