probe calibrate macro

--- a/CoreConfig/probe.cfg
+++ b/CoreConfig/probe.cfg
@@ -32,3 +32,21 @@ deactivate_gcode:
 [gcode_macro CALIBRATE_Z_OFFSET]
 gcode:
     PROBE_CALIBRATE
+
+[gcode_macro MOVE_PROBE_TO_CENTER]
+gcode:
+   # Set the bed center
+  {% set POSITION_CENTER_X = printer.toolhead.axis_maximum.x|int/2 - printer.toolhead.axis_minimum.x|int/2 %}
+  {% set POSITION_CENTER_Y = printer.toolhead.axis_maximum.y|int/2 - printer.toolhead.axis_minimum.y|int/2 %}
+  # Set the Z homing position with the centered probe
+  {% set PROBE_CENTER_X = POSITION_CENTER_X - printer["configfile"].config["probe"]["x_offset"]|int %}
+  {% set PROBE_CENTER_Y = POSITION_CENTER_Y - printer["configfile"].config["probe"]["y_offset"]|int %}
+
+  G90
+  G0 X{PROBE_CENTER_X} Y{PROBE_CENTER_Y} F5000
+
+[gcode_macro PROBE_CALIBRATE]
+rename_existing: _BASE_PROBE_CALIBRATE
+gcode:
+  MOVE_PROBE_TO_CENTER
+  _BASE_PROBE_CALIBRATE
