--- a/CoreConfig/extruder.cfg
+++ b/CoreConfig/extruder.cfg
@@ -1,4 +1,12 @@
 
+[tmc2209 extruder]
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 3
+run_current: 0.3
+hold_current: 0.3 #0.4
+stealthchop_threshold: 999999
+
 [extruder]
 step_pin: gpio14
 dir_pin: !gpio13 #change this for direction
