--- a/CoreConfig/variables.cfg
+++ b/CoreConfig/variables.cfg
@@ -8,7 +8,7 @@ variable_verbose: True
 
 ## SPEEDS
 variable_homing_travel_speed: 150
-variable_travel_speed: 350
+variable_travel_speed: 250
 variable_z_drop_speed: 5
 
 ## ACCELS
@@ -32,6 +32,9 @@ variable_homing_zhop: 5
 
 ## XY axis homing order and backoff distance after touching the endstops
 variable_homing_backoff_distance_xy: -5, -5 # move 5mm in negative direction on both axis
+
+## Temperature of the extruder used to preheat the chamber temperature and do some START_PRINT actions
+variable_safe_extruder_temp: 150
 
 ## Park position used when pause, end_print, etc...
 variable_park_position_xy: 90, 170
